feat: add /recipe GET endpoint
